<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screen_background">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/toolbar_background"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:titleCentered="false"
            app:titleTextColor="@color/toolbar_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <View
            android:id="@+id/drawer_edge_zone"
            android:layout_width="16dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:focusable="false"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/drawer_handle"
            android:layout_width="10dp"
            android:layout_height="72dp"
            android:background="@drawable/drawer_handle_background"
            android:clickable="true"
            android:contentDescription="@string/open_menu"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawer_background"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_con_fondo" />

        <TextView
            android:id="@+id/drawer_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/organizer_panel"
            android:textAlignment="center"
            android:textColor="@color/drawer_title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_confirmed_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:checkable="true"
            android:text="@string/menu_confirmed"
            android:textColor="@color/text_primary"
            app:backgroundTint="@color/card_background"
            app:iconTint="@color/action_primary"
            app:icon="@android:drawable/ic_menu_agenda" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_diffusion_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checkable="true"
            android:text="@string/menu_diffusion"
            android:textColor="@color/text_primary"
            app:backgroundTint="@color/card_background"
            app:iconTint="@color/action_primary"
            app:icon="@android:drawable/ic_dialog_email" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/menu_carousel_button"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:checkable="true"
            android:text="@string/menu_carousel"
            android:textColor="@color/text_primary"
            app:backgroundTint="@color/card_background"
            app:iconTint="@color/action_primary"
            app:icon="@android:drawable/ic_menu_gallery" />
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>
